tests/ui/suggestions/into-str.stderr
error[E0277]: the trait `Into<&str>` is not implemented for `String`
  --> $DIR/into-str.rs:4:9
   |
LL |     foo(String::new());
   |     --- ^^^^^^^^^^^^^ the trait `Into<&str>` is not implemented for `String`, which is required by `String: Into<&str>`
   |     |
   |     required by a bound introduced by this call
   |
   = note: required for `String` to implement `Into<&str>`
note: required by a bound in `foo`
  --> $DIR/into-str.rs:1:31
   |
LL | fn foo<'a, T>(_t: T) where T: Into<&'a str> {}
   |                               ^^^^^^^^^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
